--- a/src/app/componentes/auth/auth.component.css
+++ b/src/app/componentes/auth/auth.component.css
@@ -16,8 +16,7 @@ body.no-scroll {
     width: 100%;
     height: 100dvh;
     max-width: 100%;
-    /* overflow: hidden; */
-    overflow: visible; 
+    overflow: hidden;
     z-index: 1;
     justify-content: flex-start;
     align-items: flex-end;
